# rag-portfolio-chatbot

./: .cursorignore  .dockerignore  .env.example  .gitignore  .npmrc  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  vercel.json
.cursor/rules/: api-contracts.mdc  coding-style.mdc  env-and-security.mdc  fastapi-architecture.mdc  fastapi-async.mdc  fastapi-validation.mdc  git-workflow.mdc  nestjs-architecture.mdc  nestjs-error-handling.mdc  nestjs-validation.mdc  nextjs-architecture.mdc  nextjs-component-props.mdc  nextjs-data-fetching.mdc  nextjs-form-handling.mdc  nextjs-shadcn.mdc  type-safety.mdc
.github/workflows/: backend.yml
apps/ai/: .env.example  Dockerfile  pyproject.toml
apps/ai/app/: config.py  main.py
apps/ai/app/db/: session.py
apps/ai/app/models/: schemas.py
apps/ai/app/routers/: chat.py
apps/ai/app/services/: chat.py  embedding.py  retrieval.py
apps/api/: .env.example  Dockerfile  docker-entrypoint.sh  package.json  prisma.config.ts
apps/api/prisma/: schema.prisma
apps/api/src/: app.module.ts  env.ts  main.ts
apps/api/src/chat/: chat.controller.ts  chat.service.ts
apps/web/: .env.example  README.md  next.config.ts  package.json  pnpm-lock.yaml
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/components/: chat-message.tsx  source-card.tsx  suggested-questions.tsx
apps/web/lib/: chat-stream.ts  env.ts
docs/: DEPLOYMENT.md  about.md  projects.md  resume.md
scripts/: deploy-cloud-run.sh  gcp_run_env_yaml.py
scripts/ingest/: .env.example  ingest.py  requirements.txt
(+4 files in other folders)
